refactor: store resolving absolute path internally